# plutopluto

./: CHANGELOG.rst  CHANGES.md  MANIFEST.in  README.md  README.rst  example.cfg  index.html  plutopluto.py  pyproject.toml  server.py  setup.py
plutopluto/: __init__.py  index.html
plutopluto/static/: jqlite.js  plutopluto.css  plutopluto.js  style.css
static/: color.css  jqlite.js  plutopluto.js
style/: kabumm.less
style/colorschemes/pony/: rarity.less
